deploy/k8s/local-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stockhub
spec:
  type: NodePort
  selector:
    app: stockhub
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080
